Add the LDBC social network as a second query domain
